<resources>
    <string name="app_name">GB-2-06h-Notes</string>
    <string name="app_title">Заметки</string>
    <string name="action_sort">Сортировать</string>
    <string name="action_new">Создать новую заметку</string>
    <string name="action_settings">Настройки</string>
    <string name="action_sort_title">По заголовкам</string>
    <string name="action_sort_date">По датам</string>
    <string name="action_account">Аккаунт</string>
    <string name="action_theme">Темы</string>
    <string name="action_backup">Резервная копия</string>
    <string name="action_favorite">Избранное</string>
    <string name="drawer_header_title">Настройки</string>
    <string name="drawer_header_text">какой-то текст</string>
    <string name="navigation_drawer_open">Открыть боковушку</string>
    <string name="navigation_drawer_close">Закрыть боковушку</string>
    <string name="drawer_header_username">Остап Ибрагимович Бендер</string>
    <string name="photo">Фото</string>
    <string name="action_open">Открыть</string>
    <string name="action_update">Обновить</string>
    <string name="action_delete">Удалить</string>
    <string name="edit_note">Редактирование заметки</string>
    <string name="hint_note_title">Название заметки</string>
    <string name="hint_note_body">Текст заметки</string>
    <string name="hint_note_image_url">Ссылка на картинку</string>
    <string name="note_detail">Заметка</string>
    <string name="hint_note_date">Дата создания</string>
    <string name="change_date">Изменить дату</string>
    <string name="set_date">Установить дату</string>
    <string name="delete_note_title">Удаление заметки</string>
    <string name="delete_note_message">Вы действительно хотите удалить заметку?</string>
    <string name="delete_note_positive">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
</resources>